# aoc2015

./: AUTHORS.rst  LICENSE.txt  README.md  README.rst  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
docs/: conf.py  index.rst
src/aoc2015/: core.py  day0.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  skeleton.py
tests/: conftest.py  test_core.py  test_day1.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day17.py  test_day18.py  test_day19.py  test_day2.py  test_day20.py  test_day21.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py  test_skeleton.py
