[metadata]
name = aoc2015
description = A python try for Advent of Code 2015
author = Cian Synnott
author_email = cian@emauton.org
license = MIT
url = https://github.com/emauton/
platforms = any

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
install_requires =
    pygments

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov
    pytest-flake8

[options.entry_points]
console_scripts =
    aoc = aoc2015.core:main

[tool:pytest]
addopts =
    --flake8
    --cov aoc2015 --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[flake8]
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
